style: minor ui change

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,17 +140,19 @@ a {
   margin-top: 20px;
   margin-left: -20px;
 }
-.specific{  // for treatment process
+.specific {
+  // for treatment process
   .page-title {
     font-size: 25px;
     font-weight: 600;
     margin-left: 5%;
   }
 }
-.specific-storage{  // for Smart-Lab-Storage
+.specific-storage {
+  // for Smart-Lab-Storage
   .page-title {
     font-size: 25px;
     font-weight: 600;
-    margin-left: 12%;
+    // margin-left: 12%;
   }
 }
