--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -67,6 +67,10 @@
   border-radius: 22px;
   background-color: white;
   margin-top: 20px;
+  transition: all 0.5s ease-out;
+  &:hover {
+    @extend .shadow;
+  }
   .img {
     text-align: center;
   }
