--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -1,6 +1,9 @@
 .pb-0 {
   padding-bottom: 0 !important;
 }
+.pb-5{
+  padding-bottom: 5px;
+}
 .p-15 {
   padding: 15px;
 }
@@ -13,6 +16,10 @@
 .plr-10 {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.p-30{
+  padding: 30px;
 }
 
 .plr-20 {
