feat: handling data

--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -81,6 +81,14 @@
     .anticon {
       margin-right: 5px;
     }
+    i {
+      padding: 15px 0;
+      vertical-align: text-bottom;
+    }
+    .text {
+      max-width: 80%;
+      display: inline-block;
+    }
   }
   .title {
     color: #000;
