--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -13,7 +13,6 @@
   // color: black;
 }
 
-
 .ant-time-picker-input {
   border-radius: $default-radius;
 }
@@ -48,6 +47,12 @@
     height: 55px;
     font-weight: 400;
     color: #495057;
+    // border: 1px solid red;
+  }
+
+  .ant-select-selection__placeholder,
+  .ant-select-search__field__placeholder {
+    margin-top: -15px;
   }
   .ant-table-empty .ant-table-body {
     border-radius: 60px;
