--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -1,7 +1,6 @@
 .mr-15 {
   margin-right: 15px;
 }
-
 .mr-5 {
   margin-right: 5px;
 }
@@ -9,12 +8,21 @@
 .ml-5 {
   margin-left: 5px;
 }
+.ml-10 {
+  margin-left: 10px;
+}
 
+.ml-20 {
+  margin-left: 20px;
+}
 .ml-15 {
   margin-left: 15px;
 }
-.ml-40{
+.ml-40 {
   margin-left: 40px;
+}
+.ml-80 {
+  margin-left: 80px;
 }
 
 .ml-110 {
@@ -34,6 +42,9 @@
 
 .mb-11 {
   margin-bottom: -11px;
+}
+.mb-1 {
+  margin-bottom: 1px;
 }
 
 .m-0 {
