--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -105,7 +105,23 @@
   margin-top: 5px;
   padding-left: 5px;
   input {
-    height: 53px;
+    height: 50px;
+    border: 1px solid #bebfcb;
+  }
+  .ant-input-prefix {
+    font-size: 16px;
+    padding-left: 10px;
+  }
+}
+.inventory-search {
+  width: 18%;
+  border-radius: 44px;
+  height: 50px;
+  right: 20px;
+  margin-top: -75px;
+  padding-left: 5px;
+  input {
+    height: 40px;
     border: 1px solid #bebfcb;
   }
   .ant-input-prefix {
