feat: new sample page

--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -56,3 +56,9 @@ header.ant-layout-header {
     width: 300px;
   }
 }
+.pg-head {
+  float: left;
+  font-size: 1.12em;
+  font-weight: 400;
+  color: #212529;
+}
