--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -57,6 +57,9 @@
     .imageHeading {
       border-bottom: none;
     }
+    .ant-tabs-bar{
+      border-bottom: none;
+    }
   }
 
   .border-bottom-line {
