feat: print_label_confirm_button

--- a/assets/css/components/_labels.scss
+++ b/assets/css/components/_labels.scss
@@ -78,6 +78,14 @@
   height: auto;
 }
 
+.blue{
+  background-color: blue;
+  color: #fff;
+}
+.gray{
+  background-color: gray;
+  color: #fff;
+}
 .label-page {
   padding-left: 40px;
   padding-right: 40px;
