feat: new screen ui

--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -4,7 +4,12 @@
 .mr-5 {
   margin-right: 5px;
 }
-
+.mr-10 {
+  margin-right: 10px;
+}
+.mb-5 {
+  margin-bottom: 5px;
+}
 .ml-5 {
   margin-left: 5px;
 }
@@ -39,7 +44,7 @@
 .mt-15 {
   margin-top: 15px;
 }
-.mt-25{
+.mt-25 {
   margin-top: 25px;
 }
 .mb-15 {
