--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -1,3 +1,4 @@
+
 .blockState {
   position: relative;
   &::before {
@@ -173,10 +174,10 @@
     }
   }
   .ant-steps-item-active {
-    background-color: #f2f5fb;
+    background-color: #d1f2dc;
     .ant-steps-item-content {
       &::before {
-        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg);
       }
     }
   }
