--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -8,10 +8,11 @@
 
   .h-tabs .ant-tabs-tab {
     padding: 8px 25px;
+    margin-top: 500px;
   }
   .flag-title {
     img {
-      margin-right: 5px;
+      margin-right: 25px;
       font-size: 16px;
       height: 25px;
     }
