--- a/assets/css/partials/_background-color.scss
+++ b/assets/css/partials/_background-color.scss
@@ -4,7 +4,9 @@
   border-radius: 35px;
   border: 1px solid red;
 }
-
+.color-white {
+  color: white;
+}
 .bg-gray-100 {
   background-color: #f3f6f9;
 }
