--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -39,6 +39,9 @@
   .consumables-heading {
     font-size: 16px;
     margin-top: -8px;
+    width: 75%;
+    text-align: center;
+    margin-left: 40px;
   }
   .slider-svg {
     width: 100%;
