--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -2,12 +2,16 @@
   margin-bottom: 3em;
   margin-top: 10px;
   text-align: center;
-  padding: 15px;
+  // padding: 15px;
   border-radius: 20px;
   background-color: white;
   min-height: 80%;
   //@extend .light-shadow;
   box-shadow: 0 26px 120px rgb(0 0 0 / 4%); // custom shadow because raja need dito design
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 25px;
+  padding-bottom: 15px;
   .svg-container {
     max-width: 117px;
     margin: auto;
@@ -39,9 +43,9 @@
   .consumables-heading {
     font-size: 16px;
     margin-top: -8px;
-    width: 75%;
-    text-align: center;
-    margin-left: 40px;
+    // width: 75%;
+    // text-align: center;
+    // margin-left: 40px;
   }
   .slider-svg {
     width: 100%;
