--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -50,8 +50,17 @@
 .mt-20 {
   margin-top: 20px;
 }
+
+.mtm-20 {
+  margin-top: -20px;
+}
+
 .mb-15 {
   margin-bottom: 15px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
 }
 
 .mb-11 {
