feat: new screen ui

--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -26,6 +26,9 @@
 .ml-40 {
   margin-left: 40px;
 }
+.ml-35{
+  margin-left: 35px;
+}
 .ml-80 {
   margin-left: 80px;
 }
@@ -36,7 +39,9 @@
 .ml-150 {
   margin-left: 250px;
 }
-
+.ml-90{
+  margin-left: 84%;
+}
 .mt-5 {
   margin-top: 5px;
 }
