--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -156,3 +156,98 @@
   background-color: #e9f3ff;
   border-radius: 10px;
 }
+.modal-design {
+  .ant-input {
+    border-radius: 1px;
+  }
+  .ant-btn {
+    border-radius: 8px;
+    width: 12%;
+    height: 35px;
+    margin-right: 20px;
+  }
+  .ant-modal-content {
+    border-radius: 15px;
+    width: 1000px;
+  }
+}
+.upload-button {
+  height: 20px;
+  width: 30px;
+  margin-top: 15px;
+}
+.search-field-msg {
+  width: 260px;
+  height: 50px;
+  padding-right: 15px;
+  .ant-input {
+    border-radius: 10px;
+    background-color: #fff;
+    // margin-top: 60px;
+  }
+  .ant-input-search-icon {
+    padding-bottom: 18px;
+    padding-right: 20px;
+    // margin-top: 120px;
+  }
+}
+.btn-btn-msg-scren{
+  .ant-btn{
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left:20px;
+    background: #8B8B8B;
+    color: white;
+    padding-top:2px;
+  }
+}
+.message-heading {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 28px;
+  color: #000;
+}
+.message-span{
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  color: #000;
+}
+.message-span-light-text{
+    color: #8B8B8B;
+    font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+}
+.message-paragraph{
+  font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 28px;
+color: #000;
+}
+.screen-bg-color {
+  background-color: #f5f5f5;
+}
+.font-wt {
+  font-weight: 500;
+}
+.message-scr-tabs {
+  border-radius: 1px;
+  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
+    border: 1px solid #ececec;
+    border-radius: 1px;
+    margin-right: 30px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #fff;
+  }
+  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
+    color: #3869d1;
+    background-color: #f2f5fb !important;
+  }
+}
