--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -2,7 +2,7 @@
   margin-bottom: 3em;
   margin-top: 10px;
   text-align: center;
-  // padding: 15px;
+  padding: 15px;
   border-radius: 20px;
   background-color: white;
   min-height: 80%;
