--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -183,12 +183,13 @@
   .ant-input {
     border-radius: 10px;
     background-color: #fff;
-    // margin-top: 60px;
+    margin-top: 5px;
+    // padding-top: 15px;
   }
   .ant-input-search-icon {
     padding-bottom: 18px;
     padding-right: 20px;
-    // margin-top: 120px;
+    margin-top: 10px;
   }
 }
 .btn-btn-msg-scren{
