--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -7,6 +7,12 @@
 .mr-10 {
   margin-right: 10px;
 }
+.mr-2{
+  margin-right: 2%;
+}
+.mr-30{
+  margin-right: 30px;
+}
 .mb-5 {
   margin-bottom: 5px;
 }
@@ -26,13 +32,15 @@
 .ml-40 {
   margin-left: 40px;
 }
-.ml-35{
-  margin-left: 35px;
+.ml-30{
+  margin-left: 30px;
 }
 .ml-80 {
   margin-left: 80px;
 }
-
+.ml-2{
+  margin-left: 2%;
+}
 .ml-110 {
   margin-left: 110px;
 }
@@ -40,7 +48,7 @@
   margin-left: 250px;
 }
 .ml-90{
-  margin-left: 84%;
+  margin-left: 80%;
 }
 .mt-5 {
   margin-top: 5px;
