--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -184,7 +184,7 @@
       
       &::before {
         content: '';       
-        background-image: url(http://localhost:22462/web/icons/alarm.png);
+        background-image: url(http://demoapi.qmaid.co/web/icons/alarm.png);
       }
     }
   }
@@ -199,7 +199,7 @@
       margin-top: 3px;
       &::before {
         content: '';       
-        background-image: url(http://localhost:22462/web/icons/alarm.png);
+        background-image: url(http://demoapi.qmaid.co/web/icons/alarm.png);
       }
     }
   }
