--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -178,9 +178,9 @@
 
   .ant-steps-item-error {
     background: #f2e2d1;
-    margin-left: 20px;
+    margin-left: 10px;
     .ant-steps-item-content {
-      margin-left: 20px;
+      margin-left: 10px;
       
       &::before {
         content: '';       
@@ -228,6 +228,16 @@
     }
   }
 
+
+  .ant-steps-item-active-blue {
+    background-color: #d1e8f2;
+    .ant-steps-item-content {
+      margin-left: 20px;
+      &::before {
+        background-image: url(http://demoapi.qmaid.co/web/icons/blue.png);
+      }
+    }
+  }
   .treatmentName {
     font-size: 14px;
     padding-top: 10px;
