--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -1,4 +1,45 @@
+.fridge-tile {
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 22px;
+  background-color: white;
+  margin-top: 20px;
+  transition: all 0.5s ease-out;
 
+  &:hover {
+    @extend .shadow;
+  }
+  .img {
+    text-align: center;
+  }
+  .location {
+    color: #7a7575;
+    font-size: 14px;
+    padding: 5px 15px 0;
+
+    .anticon {
+      margin-right: 5px;
+    }
+    i {
+      padding: 5px 0 15px;
+      vertical-align: top;
+    }
+    .text {
+      max-width: 80%;
+      display: inline-block;
+    }
+  }
+  .title {
+    color: #000;
+    padding-bottom: 10px;
+  }
+  .icons span {
+    padding: 10px 15px 0;
+    @extend .w-50;
+    @extend .display-inline-block;
+    @extend .float-left;
+  }
+}
 
 .inventory-page {
   .icon-text {
@@ -14,9 +55,16 @@
   }
   .flag-title {
     img {
-      margin-right: 25px;
+      margin-right: 12px;
       font-size: 16px;
       height: 25px;
+    }
+    .title {
+      max-width: 140px;
+      display: inline-block;
+      white-space: pre-wrap;
+      vertical-align: middle;
+      line-height: 1;
     }
   }
 
@@ -77,50 +125,6 @@
   }
 }
 
-.fridge-tile {
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 22px;
-  background-color: white;
-  margin-top: 20px;
-  transition: all 0.5s ease-out;
-
-  &:hover {
-    @extend .shadow;
-  }
-  .img {
-    text-align: center;
-  }
-  .location {
-    color: #7a7575;
-    font-size: 14px;
-    padding: 5px 15px 0;
-
-    .anticon {
-      margin-right: 5px;
-    }
-    i {
-      padding: 5px 0 15px;
-      vertical-align: top;
-    }
-    .text {
-      max-width: 80%;
-      display: inline-block;
-    }
-  }
-  .title {
-    color: #000;
-    padding-bottom: 10px;
-  }
-  .icons span {
-    padding: 10px 15px 0;
-    @extend .w-50;
-    @extend .display-inline-block;
-    @extend .float-left;
-  }
-}
-
-
 .collection-processing-steps {
   .ant-form-item-children button {
     zoom: 1.3;
@@ -132,5 +136,3 @@
     background-color: $primary-color;
   }
 }
-
-
