--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -1,4 +1,16 @@
 $defaultHeight: calc(100vh - 100px);
+.chat-margin {
+  .ant-card-head-title {
+    margin-bottom: -50px;
+  }
+}
+
+.reduce-margin {
+  .ant-card-body {
+    padding-left: -5px;
+  }
+}
+
 .chat-page {
   .ant-list-split .ant-list-item {
     border-bottom: none;
@@ -33,6 +45,17 @@ $defaultHeight: calc(100vh - 100px);
   }
 
   .right-bar {
+    .height-100 {
+      .ant-card-body {
+        height: calc(100vh - 220px);
+      }
+      // position: absolute;
+      // width: 100%;
+      // min-height: 100%;
+      // .ant-card-body {
+      //   min-height: 100%;
+      // }
+    }
     .send-message-input {
       background-color: #fff;
       border: 1px solid #bebfcb;
@@ -75,20 +98,14 @@ $defaultHeight: calc(100vh - 100px);
     }
 
     .peer-to-peer-chat-list {
+      height: calc(100vh - 426px);
       margin-bottom: 20px;
       overflow-y: auto;
-      max-height: 200px;
-      height: 100%;
     }
 
     .ant-comment-inner {
       padding: 0;
     }
-  }
-
-  .max-h-200 {
-    // max-height: 200px;
-    // overflow-y: auto;
   }
 }
 
@@ -97,11 +114,6 @@ $defaultHeight: calc(100vh - 100px);
   bottom: 1px;
   right: 1px;
   // padding: 20px;
-}
-.chat-margin {
-  .ant-card-head-title {
-    margin-bottom: -50px;
-  }
 }
 
 .chat--listing-container {
@@ -112,10 +124,4 @@ $defaultHeight: calc(100vh - 100px);
 .chat-container-height {
   max-height: 660px;
   overflow-x: auto;
-}
-
-.reduce-margin {
-  .ant-card-body {
-    padding-left: -5px;
-  }
 }
