fix: adding minor ui chanegs

--- a/assets/css/partials/_shadow.scss
+++ b/assets/css/partials/_shadow.scss
@@ -9,3 +9,7 @@
 .light-shadow {
   box-shadow: 0 15px 12px rgb(161 161 161 / 4%);
 }
+
+.r-shadow {
+  box-shadow: 0 26px 120px rgb(0 0 0 / 4%); // raja shadow
+}
