--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -7,10 +7,10 @@
 .mr-10 {
   margin-right: 10px;
 }
-.mr-2{
+.mr-2 {
   margin-right: 2%;
 }
-.mr-30{
+.mr-30 {
   margin-right: 30px;
 }
 .mb-5 {
@@ -32,13 +32,13 @@
 .ml-40 {
   margin-left: 40px;
 }
-.ml-30{
+.ml-30 {
   margin-left: 30px;
 }
 .ml-80 {
   margin-left: 80px;
 }
-.ml-2{
+.ml-2 {
   margin-left: 2%;
 }
 .ml-110 {
@@ -47,7 +47,7 @@
 .ml-150 {
   margin-left: 250px;
 }
-.ml-90{
+.ml-90 {
   margin-left: 80%;
 }
 .mt-5 {
@@ -59,6 +59,9 @@
 }
 .mt-25 {
   margin-top: 25px;
+}
+.mt-40 {
+  margin-top: 40px;
 }
 .mt-20 {
   margin-top: 20px;
