fix: fixing typo

--- a/assets/css/components/_admin.scss
+++ b/assets/css/components/_admin.scss
@@ -22,7 +22,7 @@
     margin-right: 5px;
     margin-top: 5px;
     padding: 15px;
-    font-size: 18px;
+    font-size: 	1.125rem;
   }
   .ant-select-selection__rendered > ul > li {
     height: 100%;
@@ -30,7 +30,7 @@
     margin-top: 10px;
   }
   .ant-select-selection__choice__remove > i {
-    font-size: 17px;
+    font-size: 1.063rem;
     margin-top: 5px;
   }
   .ant-checkbox-wrapper h2{
