--- a/assets/css/components/_support.scss
+++ b/assets/css/components/_support.scss
@@ -1,9 +1,9 @@
 .support-detail {
   .user-involved {
     .ant-tabs-tabpane {
-      font-size: 14px;
+      font-size: 	0.875rem;
       h6 {
-        font-size: 14px;
+        font-size: 	0.875rem;
       }
     }
   }
