--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -35,11 +35,11 @@ $defaultHeight: calc(100vh - 100px);
       }
     }
     .ant-list-item-meta-title {
-      font-size: 20px;
+      font-size: 	1.25rem;
       color: #6c757d;
     }
     .ant-list-item-meta-description {
-      font-size: 10px;
+      font-size: 	0.625rem;
       color: #6c757d;
     }
   }
@@ -72,8 +72,8 @@ $defaultHeight: calc(100vh - 100px);
     .content-body {
       padding: 15px;
       color: #233151;
-      font-size: 10px;
-      font-size: 14px;
+      font-size: 	0.625rem;
+      font-size:	0.875rem;
       font-weight: bold;
       border-radius: 22px;
     }
@@ -94,7 +94,7 @@ $defaultHeight: calc(100vh - 100px);
       }
     }
     .ant-comment-content-author-name {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
 
     .peer-to-peer-chat-list {
