--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -27,7 +27,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    font-size: 16px;
+    font-size: 1rem (base);
     font-weight: bold;
   }
   .slider-beast {
@@ -43,7 +43,7 @@
     }
   }
   .consumables-heading {
-    font-size: 16px;
+    font-size: 1rem (base);
     margin-top: -8px;
     // width: 75%;
     // text-align: center;
@@ -67,7 +67,7 @@
     left: 0;
     z-index: 2;
     font-weight: bold;
-    font-size: 32px;
+    font-size: 	2rem;
     right: 0;
   }
 }
