--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -5,7 +5,7 @@
   margin: 25px;
 
   .title {
-    font-size: 25px;
+    font-size: 	1.5625rem;
   }
 
   .home-tab,
@@ -36,7 +36,7 @@
       top: 0;
       bottom: 0;
       margin: auto;
-      font-size: 24px;
+      font-size: 	1.5rem;
       font-weight: bold;
       position: relative;
       left: 95%;
@@ -66,7 +66,7 @@
       vertical-align: middle;
       margin-left: 10px;
       padding-left: 10px;
-      font-size: 15px;
+      font-size: 	0.9375rem;
     }
   }
 
@@ -116,7 +116,7 @@
 
   .white-card {
     text-decoration: none;
-    margin: 15px auto;
+    margin: 3% auto;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     color: #233151;
     border-radius: 22px;
@@ -128,7 +128,7 @@
     margin-bottom: -20px;
   .white-card {
     text-decoration: none;
-    margin: 15px auto;
+    margin: 3% auto;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     color: #233151;
     border-radius: 22px;
