--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -14,7 +14,7 @@
   }
   .location {
     color: #7a7575;
-    font-size: 14px;
+    font-size:	0.875rem;
     padding: 5px 15px 0;
 
     .anticon {
@@ -56,7 +56,7 @@
   .flag-title {
     img {
       margin-right: 12px;
-      font-size: 16px;
+      font-size:1rem (base);
       height: 25px;
     }
     .title {
@@ -85,7 +85,7 @@
       }
     }
     .heading {
-      font-size: 14px;
+      font-size: 0.875rem;
       display: inline-block;
       max-width: 74%;
       color: #909090;
