--- a/assets/css/components/_labels.scss
+++ b/assets/css/components/_labels.scss
@@ -19,37 +19,37 @@
   }
   .hospital-name {
     margin: 15px auto;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
   }
   .collection-datetime {
-    font-size: 14px;
+    font-size: 0.875rem;
     margin: 5px auto;
   }
   .collection-time {
     width: 60px;
     display: inline-block;
-    font-size: 10px;
+    font-size: 0.625rem;
     vertical-align: middle;
   }
   .irradiate {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .manufacturer-name {
-    font-size: 15px;
+    font-size: 	0.9375rem;
     margin-top: 5px;
     font-weight: bold;
     display: block;
   }
   .manufacturer-detail {
-    font-size: 10px;
+    font-size: 0.625rem;
     display: inline-block;
   }
   .further {
     font-size: 1rem;
   }
   .right {
-    font-size: 12px;
+    font-size: 0.75rem;
     padding-left: 5px;
     .bag-qr {
       max-width: 50px;
@@ -70,7 +70,7 @@
 }
 
 .print-btn {
-  font-size: 14px;
+  font-size: 0.875rem;
   padding: 10px 15px;
   background-color: #3869d1;
   border-radius: 18px;
