--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -78,7 +78,7 @@
     display: inline-block;
     width: 100%;
     white-space: nowrap;
-    font-size: 14px;
+    font-size: 	0.875rem;
     border-radius: 22px;
     max-width: 150px;
   }
@@ -102,7 +102,7 @@
   }
 
   .ant-menu-item {
-    font-size: 14px;
+    font-size: 	0.875rem;
     height: auto;
     padding: 0 30px;
     &:hover {
@@ -121,9 +121,11 @@
   .menu-container {
     padding: 10px 30px 10px 30px;
     border-radius: 22px;
+    display: flex;
     img {
       color: $primary-color;
       filter: grayscale(100%) opacity(0.7);
+      margin: 6px;
     }
     &:hover {
       cursor: pointer;
@@ -133,6 +135,7 @@
         fill: #3869d1;
         text-shadow: 1px 1px 1px rgb(244, 4, 4);
         filter: grayscale(0%) drop-shadow(0 0 0 blue);
+        margin: 6px;
       }
     }
   }
