--- a/assets/css/partials/_calendar.scss
+++ b/assets/css/partials/_calendar.scss
@@ -3,6 +3,6 @@
   color: white !important;
   padding: 8px;
   border-radius: 13px;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 400;
 }
