--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -1,6 +1,6 @@
 .grey-card{
   background-color: #f9f9f9;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: bold;
   border-radius: 44px;
   padding: 1.5rem;
@@ -19,7 +19,7 @@
   }
   .ant-card-meta-description,
   .ant-card-meta-title {
-    font-size: 16px;
+    font-size: 1rem (base);
     font-weight: bold;
   }
   .anticon-right {
@@ -29,7 +29,7 @@
     margin: auto;
     bottom: 0;
     height: 18px;
-    font-size: 24px;
+    font-size: 	1.5rem;
   }
   //
   &.bg-danger.white,
