--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -9,7 +9,7 @@
 .page-search-input {
   border-radius: 40px;
   padding-top: 20px 20px 20px 20px;
-  font-size: 18px;
+  font-size: 1.125rem;
   // color: black;
 }
 
@@ -43,7 +43,7 @@
     background-color: #f9f9f9;
     padding: 15px;
     border: 0;
-    font-size: 16px;
+    font-size: 1rem (base);
     height: 55px;
     font-weight: 400;
     color: #495057;
@@ -109,7 +109,7 @@
     border: 1px solid #bebfcb;
   }
   .ant-input-prefix {
-    font-size: 16px;
+    font-size: 1rem (base);
     padding-left: 10px;
   }
 }
@@ -125,7 +125,7 @@
     border: 1px solid #bebfcb;
   }
   .ant-input-prefix {
-    font-size: 16px;
+    font-size: 1rem (base);
     padding-left: 10px;
   }
 }
@@ -146,7 +146,7 @@
     display: inline-block;
     margin-right: 4px;
     color: #f5222d;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 1;
     content: '*';
   }
@@ -205,14 +205,14 @@
 .message-heading {
   font-style: normal;
   font-weight: 800;
-  font-size: 30px;
+  font-size: 1.875rem;
   line-height: 28px;
   color: #000;
 }
 .message-span {
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 28px;
   color: #000;
 }
@@ -220,13 +220,13 @@
   color: #8b8b8b;
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 28px;
 }
 .message-paragraph {
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 28px;
   color: #000;
 }
@@ -243,7 +243,7 @@
     border-radius: 1px;
     margin-right: 30px;
     margin-bottom: 10px;
-    font-size: 16px;
+    font-size: 1rem (base);
     font-weight: 600;
     background-color: #fff;
   }
