--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -42,7 +42,7 @@
   .ant-steps-item {
     padding: 5px 2px;
     border: 0;
-    font-size: 12px;
+    font-size: 0.75rem;
     color: #233151;
     border-radius: 22px;
     cursor: pointer;
@@ -62,7 +62,7 @@
     vertical-align: middle;
     margin-top: 16px;
     min-width: 80px;
-    font-size: 11px;
+    font-size: 0.6875rem;
   }
 
   .step-col {
@@ -198,7 +198,7 @@
       margin-left: 20px;
       margin-top: 10px;
       font-weight: 400;
-      font-size: 20px;
+      font-size: 1.25rem;
       &::before {
         margin-top: 1px;     
         background-image: url(http://demoapi.qmaid.co/web/icons/alarm.png);
@@ -216,7 +216,7 @@
       margin-left: 20px;
       margin-top: 10px;
       font-weight: 400;
-      font-size: 20px;
+      font-size: 1.25rem;
       &::before {
         margin-top: 3px;
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg);
@@ -244,7 +244,7 @@
       margin-left: 20px;
       margin-top: 10px;
       font-weight: 400;
-      font-size: 20px;
+      font-size: 1.25rem;
       &::before {
         background-image: url(http://demoapi.qmaid.co/web/icons/blue.png);
       }
@@ -261,7 +261,7 @@
     }
   }
   .treatmentName {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding-top: 10px;
     min-width: 59px;
     padding-right: 2px;
@@ -273,7 +273,7 @@
     margin-left: 10px;
     display: inline-block;
     height: 30px;
-    font-size: 12px;
+    font-size: 0.75rem;
     // margin-top: 12px;
     // vertical-align: text-bottom;
   }
@@ -295,7 +295,7 @@
       margin-left: 5px;
       margin-top: 10px;
       font-weight: 400;
-      font-size: 20px;
+      font-size: 1.25rem;
     & .ant-steps-item:last-child {
       padding-right: 25px;
       padding-left: 25px;
@@ -351,7 +351,7 @@
         font-weight: 400;
       }
       .date-time {
-        font-size: 16px;
+        font-size: 1rem (base);
         color: #a7a5a5;
       }
     }
@@ -371,7 +371,7 @@
   }
   .ant-timeline {
     .anticon {
-      font-size: 25px !important;
+      font-size: 1.5625rem !important;
     }
   }
 
@@ -429,7 +429,7 @@
           font-weight: 400;
         }
         .date-time {
-          font-size: 16px;
+          font-size: 1rem;
           color: #a7a5a5;
         }
       }
@@ -449,7 +449,7 @@
     }
     .ant-timeline {
       .anticon {
-        font-size: 25px !important;
+        font-size: 1.5625rem !important;
       }
     }
 
@@ -470,7 +470,7 @@
     .ant-tabs-tab{
       padding-top: 15px;
       padding-bottom: 15px;
-      font-size: 16px;
+      font-size: 1rem;
       text-align: center;
       border-radius: 22px;
       background-color: #d1f2dc;
