--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -29,7 +29,7 @@
 
   .ant-table-tbody td {
     padding: 15px 5px; // check patient list before changing it
-    font-size: 14px;
+    font-size: 0.875rem;
     vertical-align: middle;
     color: #233151;
     font-weight: 400;
