--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -69,7 +69,7 @@
   border-radius: 22px;
   margin-right: 30px;
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
   background-color: #fff;
 }
@@ -132,7 +132,7 @@
     height: auto;
   }
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
-    font-size: 18px;
+    font-size: 1.125rem;
     height: auto !important;
     font-weight: 400;
     padding: 1px 54px;
