--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -74,7 +74,8 @@
   position: relative !important;
 }
 // client hub
-.responsive_img, .img-responsive {
+.responsive_img,
+.img-responsive {
   max-width: 100%;
   height: 90px;
   border-radius: 20px;
@@ -90,11 +91,11 @@
   padding: 15px 30px;
   border-radius: 15px;
   color: white;
-  font-size: 	1.5625rem;
+  font-size: 1.5625rem;
   @extend .light-shadow;
 }
 
-.dated-time{
+.dated-time {
   background-color: $danger;
   padding: 7% 20%;
   border-radius: 22px;
@@ -121,6 +122,11 @@
 .display-inline-block {
   display: inline-block;
 }
-.display-flex{
+.display-flex {
   display: flex;
+}
+.timebox {
+  .ant-list-item {
+    padding: 3px 0;
+  }
 }
