--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -10,6 +10,12 @@
 .mr-2 {
   margin-right: 2%;
 }
+.ml-6{
+  margin-left: 6%;
+}
+.mr-6{
+  margin-right: 6%;
+}
 .mr-30 {
   margin-right: 30px;
 }
@@ -47,13 +53,18 @@
 .ml-150 {
   margin-left: 250px;
 }
+.ml-50{
+  margin-left: 50%;
+}
 .ml-90 {
   margin-left: 80%;
 }
 .mt-5 {
   margin-top: 5px;
 }
-
+.mt-3{
+  margin-top: 3%;
+}
 .mt-15 {
   margin-top: 15px;
 }
