--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -23,6 +23,12 @@
   border-radius: 22px;
   padding-bottom: 20px;
 }
+.calendar-range-picker-field {
+  .ant-calendar-picker-input.ant-input {
+    border-radius: 22px;
+    padding-bottom: 45px;
+  }
+}
 .ant-calendar-picker-input {
   margin-top: 3px;
   margin-bottom: 9px;
@@ -32,7 +38,7 @@
   // border: 1px solid gray;
 }
 .ant-calendar-range-picker-input {
-  padding-top: 25px;
+  padding-top: 22px;
   padding-bottom: 20px;
 }
 .ant-form-item-control {
@@ -108,6 +114,9 @@
     height: 50px;
     border: 1px solid #bebfcb;
   }
+  ::-webkit-input-placeholder {
+    padding-left: 7%;
+  }
   .ant-input-prefix {
     font-size: 1rem (base);
     padding-left: 10px;
@@ -124,19 +133,21 @@
     height: 40px;
     border: 1px solid #bebfcb;
   }
+  ::-webkit-input-placeholder {
+    padding-left: 7%;
+  }
   .ant-input-prefix {
     font-size: 1rem (base);
-    padding-left: 10px;
+    padding-bottom: 2%;
+    padding-left: 5%;
   }
 }
+
 .task-search {
   .page-search-input {
     margin-top: -22px;
     margin-bottom: 10px;
   }
-}
-::placeholder {
-  padding-left: 15px;
 }
 .ant-form-item-required {
   &::before {
@@ -274,4 +285,7 @@
     border-radius: 5px;
     margin-bottom: 20px;
   }
+}
+.placeholder-alignment::placeholder {
+  padding-left: 40%;
 }
