fix: ui changes reported smartlab issues

--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -27,7 +27,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    font-size: 1rem (base);
+    font-size: 1rem;
     font-weight: bold;
   }
   .slider-beast {
@@ -43,7 +43,7 @@
     }
   }
   .consumables-heading {
-    font-size: 1rem (base);
+    font-size: 1rem;
     margin-top: -8px;
     // width: 75%;
     // text-align: center;
