--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -13,7 +13,7 @@
     text-decoration: none;
     font-weight: 500;
     border-radius: 22px;
-    font-size: 1rem (base);
+    font-size: 1rem;
     padding: 15px;
     color: #233151;
     background-color: #f9f9f9;
@@ -92,7 +92,7 @@
     }
   }
   .ant-switch-inner {
-    font-size: 1rem (base);
+    font-size: 1rem;
   }
   .ant-switch-checked {
     background-color: #2255c2;
