--- a/assets/css/components/_login.scss
+++ b/assets/css/components/_login.scss
@@ -31,7 +31,7 @@
   .forgot-link {
     padding-left: 5px;
     font-weight: 400;
-    font-size: 	1rem (base);
+    font-size: 	1rem;
     a {
       &:hover{
         text-decoration: underline;
