--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -19,7 +19,7 @@
   }
   .ant-card-meta-description,
   .ant-card-meta-title {
-    font-size: 1rem (base);
+    font-size: 1rem ;
     font-weight: bold;
   }
   .anticon-right {
