--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -41,7 +41,9 @@
 .pl-5 {
   padding-left: 3rem !important;
 }
-
+.pr-10{
+  padding-right: 10%;
+}
 .pr-5 {
   padding-right: 3rem !important;
 }
@@ -53,7 +55,9 @@
 .pl-2 {
   padding-left: 2rem;
 }
-
 .pt-0 {
   padding-top: 0 !important;
+}
+.pl-10{
+  padding-left: 10%;
 }
