--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -56,7 +56,7 @@
   .flag-title {
     img {
       margin-right: 12px;
-      font-size:1rem (base);
+      font-size:1rem;
       height: 25px;
     }
     .title {
@@ -136,6 +136,7 @@
     background-color: $primary-color;
   }
 }
-.inventory-body{
-    padding:10%;
+.manf-treatment-body{
+    padding-left:10%;
+    padding-right:10%;
 }
