--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -49,7 +49,7 @@
     background-color: #f9f9f9;
     padding: 15px;
     border: 0;
-    font-size: 1rem (base);
+    font-size: 1rem;
     height: 55px;
     font-weight: 400;
     color: #495057;
@@ -117,8 +117,11 @@
   ::-webkit-input-placeholder {
     padding-left: 7%;
   }
+  ::-moz-placeholder {
+    padding-left: 7%;
+  }
   .ant-input-prefix {
-    font-size: 1rem (base);
+    font-size: 1rem;
     padding-left: 10px;
   }
 }
@@ -137,7 +140,7 @@
     padding-left: 7%;
   }
   .ant-input-prefix {
-    font-size: 1rem (base);
+    font-size: 1rem;
     padding-bottom: 2%;
     padding-left: 5%;
   }
@@ -254,7 +257,7 @@
     border-radius: 1px;
     margin-right: 30px;
     margin-bottom: 10px;
-    font-size: 1rem (base);
+    font-size: 1rem;
     font-weight: 600;
     background-color: #fff;
   }
