--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -351,7 +351,7 @@
         font-weight: 400;
       }
       .date-time {
-        font-size: 1rem (base);
+        font-size: 1rem;
         color: #a7a5a5;
       }
     }
