--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -4,6 +4,7 @@
   border-radius: $default-radius;
   padding: 9px 1px 40px 1px;
   border: none;
+  background-color: #f9f9f9;
 }
 .ant-input,
 .page-search-input {
@@ -12,7 +13,11 @@
   font-size: 1.125rem;
   // color: black;
 }
-
+.ant-selection-placeholder {
+  .ant-select-selection__placeholder {
+    color: #464e5f;
+  }
+}
 .ant-time-picker-input {
   border-radius: $default-radius;
 }
@@ -24,9 +29,14 @@
   padding-bottom: 20px;
 }
 .calendar-range-picker-field {
+  width: 20%;
   .ant-calendar-picker-input.ant-input {
-    border-radius: 22px;
-    padding-bottom: 45px;
+    border-radius: 50px;
+    padding-bottom: 48px;
+    padding-right: 1%;
+    .ant-calendar-range-picker-separator {
+      margin-top: 3%;
+    }
   }
 }
 .ant-calendar-picker-input {
@@ -102,7 +112,6 @@
   background-color: #2255c2;
   border-color: #2255c2;
 }
-
 .page-search-input {
   width: 18%;
   border-radius: 44px;
@@ -111,7 +120,8 @@
   margin-top: 5px;
   padding-left: 5px;
   input {
-    height: 50px;
+    // height: 50px;
+    height: 105%;
     border: 1px solid #bebfcb;
   }
   ::-webkit-input-placeholder {
