--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -7,13 +7,16 @@
 .mr-10 {
   margin-right: 10px;
 }
+.mr-12 {
+  margin-right: 12%;
+}
 .mr-2 {
   margin-right: 2%;
 }
-.ml-6{
+.ml-6 {
   margin-left: 6%;
 }
-.mr-6{
+.mr-6 {
   margin-right: 6%;
 }
 .mr-30 {
@@ -53,7 +56,7 @@
 .ml-150 {
   margin-left: 250px;
 }
-.ml-50{
+.ml-50 {
   margin-left: 50%;
 }
 .ml-90 {
@@ -62,7 +65,7 @@
 .mt-5 {
   margin-top: 5px;
 }
-.mt-3{
+.mt-3 {
   margin-top: 3%;
 }
 .mt-15 {
