--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -133,18 +133,18 @@
   }
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
     font-size: 1.125rem;
-    height: auto !important;
+    height: 1%;
     font-weight: 400;
-    padding: 1px 54px;
+    padding: 0.5% 7%;
     border-radius: 22px;
     margin-right: 30px;
     &::after {
       content: '';
       background-color: #e9e9e9;
-      width: 1px;
+      width: 3px;
       height: 60%;
       position: absolute;
-      right: -13px;
+      right: -6%;
       top: 0;
       bottom: 0;
       margin: auto;
@@ -154,5 +154,13 @@
         display: none;
       }
     }
+  }
+}
+.selection-tab {
+  .ant-select-selection {
+    padding: 15px 1px 40px 1px;
+  }
+  .ant-select-selection__rendered {
+    line-height: 25px;
   }
 }
