--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -3,7 +3,12 @@
   font-size: 0.875rem;
   font-weight: bold;
   border-radius: 44px;
-  padding: 1.5rem;
+  padding-left: 3rem;
+    padding-right: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    margin-left: 8.5rem;
+    margin-right: 8.5rem;
   .ant-card{
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     border-radius: 30px;
