--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -42,6 +42,10 @@ $defaultHeight: calc(100vh - 100px);
       font-size: 	1.75rem;
       color: #6c757d;
       padding-top: 3%;
+      font-weight: bold;
+    }
+    .ant-list-item-meta-content{
+      padding-top:2%;
     }
     .ant-list-item-meta-description {
       font-size: 	0.675rem;
@@ -132,6 +136,16 @@ $defaultHeight: calc(100vh - 100px);
 }
 
 .chat-container-height {
-  max-height: 660px;
+  max-height: 100%;
   overflow-x: hidden;
+}
+.chat-card-padding{
+  .grey-card{
+  margin-left: 8.5rem;
+  margin-right: 8.5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 }
