--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -34,7 +34,7 @@
     width: 80%;
     margin: auto;
     left: 0;
-    top: 50%;
+    top: 48%;
     right: 0;
     background-color: #e2e2e2;
   }
@@ -83,7 +83,8 @@
   }
 
   .ant-steps-small .ant-steps-item-title {
-    font-size: 1em;
+    font-size: 1.30em;
+    margin-top: 5px;
     &::after {
       display: none;
     }
@@ -120,6 +121,7 @@
 
   .ant-steps-item-content {
     .ant-steps-item-title {    
+      height: 25px;
       // color: #233151 !important;
       // width: -1px;
     }
