--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -3,10 +3,10 @@
   font-size: 0.875rem;
   font-weight: bold;
   border-radius: 44px;
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 4%;
+  padding-bottom: 4%;
 
   .ant-card{
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
