--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -18,6 +18,7 @@ $defaultHeight: calc(100vh - 100px);
 }
   .ant-list-split .ant-list-item {
     border-bottom: none;
+    padding-top: 3%;
   }
   .ant-comment {
     min-width: 50%;
@@ -39,10 +40,10 @@ $defaultHeight: calc(100vh - 100px);
       }
     }
     .ant-list-item-meta-title {
-      font-size: 	1.75rem;
+      font-size: 	1.25rem;
       color: #6c757d;
-      padding-top: 3%;
       font-weight: bold;
+      font-family: sans-serif;
     }
     .ant-list-item-meta-content{
       padding-top:2%;
@@ -141,11 +142,11 @@ $defaultHeight: calc(100vh - 100px);
 }
 .chat-card-padding{
   .grey-card{
-  margin-left: 8.5rem;
-  margin-right: 8.5rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 }
