--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -1,14 +1,17 @@
 .pb-0 {
   padding-bottom: 0 !important;
 }
-.pb-5{
+.pb-5 {
   padding-bottom: 5px;
 }
 .p-15 {
   padding: 15px;
 }
-.p-25{
-  padding: 25px;;
+.p-25 {
+  padding: 25px;
+}
+.pt-2 {
+  padding-top: 2%;
 }
 .pt-10 {
   padding-top: 10px;
@@ -21,7 +24,7 @@
   padding-right: 10px;
 }
 
-.p-30{
+.p-30 {
   padding: 30px;
 }
 
@@ -41,7 +44,7 @@
 .pl-5 {
   padding-left: 3rem !important;
 }
-.pr-10{
+.pr-10 {
   padding-right: 10%;
 }
 .pr-5 {
@@ -58,6 +61,6 @@
 .pt-0 {
   padding-top: 0 !important;
 }
-.pl-10{
+.pl-10 {
   padding-left: 10%;
 }
