--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -11,8 +11,9 @@
   .home-tab,
   .admin-tab {
     text-decoration: none;
-    margin: 15px auto;
-    padding: 25px;
+    margin: 5% auto;
+    padding-top: 7%;
+    padding-bottom: 6%;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     color: #909090;
     background-color: #fff;
@@ -39,7 +40,7 @@
       font-size: 	1.5rem;
       font-weight: bold;
       position: relative;
-      left: 95%;
+      left: 90%;
     }
 
     &:hover {
