--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -302,3 +302,9 @@
 .placeholder-alignment::placeholder {
   padding-left: 40%;
 }
+.availability-calender {
+  .ant-calendar-picker-input.ant-input {
+    border-radius: 22px;
+    padding-bottom: 2%;
+  }
+}
