--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -15,10 +15,16 @@ $defaultHeight: calc(100vh - 100px);
   .ant-avatar {
     width: 70px;
     height: 70px;
-}
+  }
   .ant-list-split .ant-list-item {
     border-bottom: none;
     padding-top: 3%;
+      :active {
+        background: #f2f5fb;
+        border-radius: 22px;
+        opacity: 1;
+        transition: 0.001s;
+    }
   }
   .ant-comment {
     min-width: 50%;
@@ -40,19 +46,19 @@ $defaultHeight: calc(100vh - 100px);
       }
     }
     .ant-list-item-meta-title {
-      font-size: 	1.25rem;
+      font-size: 1.25rem;
       color: #6c757d;
       font-weight: bold;
       font-family: sans-serif;
     }
-    .ant-list-item-meta-content{
-      padding-top:2%;
+    .ant-list-item-meta-content {
+      padding-top: 2%;
     }
     .ant-list-item-meta-description {
-      font-size: 	0.675rem;
+      font-size: 0.675rem;
       color: #6c757d;
       white-space: nowrap;
-      width: 44%;
+      width: 30%;
       overflow: hidden;
       text-overflow: ellipsis;
     }
@@ -86,11 +92,10 @@ $defaultHeight: calc(100vh - 100px);
     .content-body {
       padding: 15px;
       color: #233151;
-      font-size: 	0.625rem;
-      font-size:	0.875rem;
+      font-size: 0.625rem;
+      font-size: 0.875rem;
       font-weight: bold;
       border-radius: 22px;
-      
     }
     .message-sent {
       justify-content: right;
@@ -140,13 +145,13 @@ $defaultHeight: calc(100vh - 100px);
   max-height: 100%;
   overflow-x: hidden;
 }
-.chat-card-padding{
-  .grey-card{
-  margin-left: 2rem;
-  margin-right: 2rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
+.chat-card-padding {
+  .grey-card {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 }
