--- a/assets/css/partials/_btn.scss
+++ b/assets/css/partials/_btn.scss
@@ -14,3 +14,11 @@ a {
     color: $primary-color;
   }
 }
+.new-treatment-btn {
+  background-color: #ffdbdb;
+  border-color: #ffdbdb;
+}
+.new-treatment-status-btn {
+  padding: 13px 15px;
+  background-color: #fff8e5;
+}
