--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -12,6 +12,9 @@
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     border-radius: 30px;
   }
+  .ant-card-body{
+    padding:5%;
+  }
 }
 
 .avatar-card {
