--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -156,3 +156,10 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+.stat-image {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: -40px;
+  width: 50%;
+  height: 50%;
+}
