fix: pagination styling

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,7 +64,7 @@ a {
   }
 }
 
-.w-125{
+.w-125 {
   width: 123%;
 }
 
@@ -124,11 +124,11 @@ a {
   margin-bottom: 20px;
 }
 .page-title {
-  font-size: 	1.5625rem;
+  font-size: 1.5625rem;
   font-weight: 600;
 }
 .heading {
-  font-size: 	1.5625rem;
+  font-size: 1.5625rem;
 }
 .plain-header-border {
   .ant-card-head {
@@ -147,7 +147,7 @@ a {
 .specific {
   // for treatment process
   .page-title {
-    font-size: 	1.5625rem;
+    font-size: 1.5625rem;
     font-weight: 600;
     margin-left: 5%;
   }
@@ -155,13 +155,33 @@ a {
 .specific-storage {
   // for Smart-Lab-Storage
   .page-title {
-    font-size: 	1.5625rem;
+    font-size: 1.5625rem;
     font-weight: 600;
     margin-left: 10px;
   }
 }
-.inventory-storage-title{
-  .page-title{
+.inventory-storage-title {
+  .page-title {
     margin-left: 12.5%;
+  }
+}
+
+.ant-pagination {
+  .ant-pagination-item-link,.ant-pagination-disabled {
+    background: #f0f3ff;
+    zoom: 1.3;
+  }
+  .ant-pagination-item,
+  .ant-pagination-disabled .ant-pagination-item-link,.ant-pagination-disabled {
+    border-radius: 22px;
+    zoom: 1.3;
+  }
+
+  .ant-pagination-item-active {
+    background-color: #fa6363;
+    border: none;
+    a {
+      color: white;
+    }
   }
 }
