fix: after_care_concent_fixes

--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -109,7 +109,7 @@
 }
 
 .ant-checkbox-checked .ant-checkbox-inner {
-  background-color: #2255c2;
+  // background-color: #2255c2;  /// consent document checked should not be blule
   border-color: #2255c2;
 }
 .page-search-input {
