fix: ui_fixes_changing_inline_css

--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -20,3 +20,10 @@
   border: 1px solid transparent;
   height: 40px;
 }
+.ant-btn-drop-down{
+  margin-top: 15px;
+  height: 25px;
+  width: 70px;
+  border-radius: 9px;
+  padding-left: 10px;
+}
