--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -144,6 +144,20 @@ a {
   margin-top: 20px;
   margin-left: -20px;
 }
+.container-div{
+  width:100%; 
+  display: flex;
+}
+.container-steps-div{
+  width:95%; 
+  display: flex;
+}
+.container-drop-down-div{
+  width: 5%;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+
 .specific {
   // for treatment process
   .page-title {
@@ -165,7 +179,15 @@ a {
     margin-left: 12.5%;
   }
 }
-
+.vertical-line-standard-table{
+  position: absolute;
+  width: 20px;
+  height: 0;
+  border: 1px solid #999;
+  transform: rotate(90deg);
+  margin-top: 27px;
+  margin-left: -15px;
+}
 .ant-pagination {
   .ant-pagination-item-link,.ant-pagination-disabled {
     background: #f0f3ff;
